--- a/main.html
+++ b/main.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Number of Books Read</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="result"></div>
+    <script src="script.js"></script>
 </body>
-
 </html>
